2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a string format for CTCP ping time.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 3 column layout should be applied on starting up.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added the "Spring Night" theme.
	Changed to use the default font when failed to create a font.
	Changed to set an insertion point color for the input text field.
	Tweaked log view styles.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added a theme support for the input text field.
	Tweaked the default css for log views.

2007-12-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, pasting multi line text to the input text field caused an exception.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, a definition of IRC::ADDRESS_LEN was missing.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, NaN should be treated as 0 in LogController#viewing_bottom?.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Set break-word: break-all for addresses.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed the theme path to ~/Library/LimeChat/Theme.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to set ENV['HOME'] at starting up.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to split a text message if the message is too long.
	Eliminated "include OSX" and "OSX::".

2007-12-05  Satoshi Nakagawa <artension@gmail.com>

	Changed a penalty factor for text size.

2007-12-04  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to disallow double quotes.

2007-12-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, NSSelectionArray#to_a causes a segmentation fault on Tiger.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, /me command didn't work well.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Changed to parse raw commands.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>
